--- a/Klipper_cfg/Prusa_Universal_Config_Revised/Boards/Einsy/printer_einsy.cfg
+++ b/Klipper_cfg/Prusa_Universal_Config_Revised/Boards/Einsy/printer_einsy.cfg
@@ -23,7 +23,7 @@ max_accel: 3000
 #For Resonance Test
 #max_accel: 10000
 #max_accel_to_decel: 10000
-max_z_velocity: 10
+max_z_velocity: 12
 max_z_accel: 200
 
 #####################################################################
@@ -35,7 +35,8 @@ dir_pin: !x_dir_pin
 enable_pin: !x_enable_pin
 rotation_distance: 32           #16T Pulley, 2mm Belt Pitch
 microsteps: 16
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
+# TODO PV increase microsteps? enable interpolation? Waht about stealth mode?
+full_steps_per_rotation: 400    #200 for 1.8 degree, 400 for 0.9 degree
 endstop_pin: tmc2130_stepper_x:virtual_endstop
 position_endstop: 0
 position_max: 250
@@ -51,14 +52,14 @@ diag1_pin: !x_diag_pin
 driver_IHOLDDELAY: 8
 driver_TPOWERDOWN: 0
 driver_TBL: 2
-driver_TOFF: 3
-driver_HEND: 1
-driver_HSTRT: 5
+driver_TOFF: 2
+driver_HEND: 0
+driver_HSTRT: 2
 driver_PWM_FREQ: 2
-driver_PWM_GRAD: 2
-driver_PWM_AMPL: 230
+driver_PWM_GRAD: 4
+driver_PWM_AMPL: 235
 driver_PWM_AUTOSCALE: True
-driver_SGT: 2
+driver_SGT: 1
 
 [stepper_y]
 step_pin: y_step_pin
@@ -66,11 +67,11 @@ dir_pin: y_dir_pin
 enable_pin: !y_enable_pin
 rotation_distance: 32           #16T Pulley, 2mm Belt Pitch
 microsteps: 16
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
+full_steps_per_rotation: 400    #200 for 1.8 degree, 400 for 0.9 degree
 endstop_pin: tmc2130_stepper_y:virtual_endstop
-position_endstop: -4
+position_endstop: -3
 position_max: 210
-position_min: -4
+position_min: -3
 homing_speed: 50
 homing_retract_dist: 0
 
@@ -83,14 +84,14 @@ diag1_pin: !y_diag_pin
 driver_IHOLDDELAY: 8
 driver_TPOWERDOWN: 0
 driver_TBL: 2
-driver_TOFF: 3
-driver_HEND: 1
-driver_HSTRT: 5
+driver_TOFF: 2
+driver_HEND: 0
+driver_HSTRT: 2
 driver_PWM_FREQ: 2
-driver_PWM_GRAD: 2
+driver_PWM_GRAD: 4
 driver_PWM_AMPL: 235
 driver_PWM_AUTOSCALE: True
-driver_SGT: 2
+driver_SGT: 1
 
 #####################################################################
 #   Einsy Z Stepper Settings
@@ -131,6 +132,7 @@ driver_SGT: 4
 [extruder]
 step_pin: e_step_pin
 dir_pin: e_dir_pin #Direction for Stock
+full_steps_per_rotation: 400    #200 for 1.8 degree, 400 for 0.9 degree
 enable_pin: !e_enable_pin
 sensor_pin: e_sensor_pin
 min_temp: 0
@@ -145,14 +147,14 @@ diag1_pin: !e_diag_pin
 driver_IHOLDDELAY: 8
 driver_TPOWERDOWN: 0
 driver_TBL: 2
-driver_TOFF: 3
-driver_HEND: 1
-driver_HSTRT: 5
+driver_TOFF: 2
+driver_HEND: 0
+driver_HSTRT: 2
 driver_PWM_FREQ: 2
 driver_PWM_GRAD: 4
-driver_PWM_AMPL: 240
+driver_PWM_AMPL: 245
 driver_PWM_AUTOSCALE: True
-driver_SGT: 3
+driver_SGT: 1
 
 #####################################################################
 #   Bed Heater
