--- a/Klipper_cfg/Prusa_Universal_Config_Revised/mcu_example.cfg
+++ b/Klipper_cfg/Prusa_Universal_Config_Revised/mcu_example.cfg
@@ -18,7 +18,7 @@
 #When this is done you can reach the printer now over a Symlink and this can be used as the Serial port see below
 #
 ##--------------------------------------------------------------------
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0020000850534E4E313120-if00
+serial: /dev/serial/by-id/usb-Prusa_Research__prusa3d.com__Original_Prusa_i3_MK3-if00
 #restart_method: command
 ##--------------------------------------------------------------------
 # JG MCU's 
