minor cleanup after deleted files, and some update of paths to suit new klipper printer_data folder structure

--- a/Klipper_cfg/Prusa_Universal_Config_Revised/Macros/mesh_magnets.cfg
+++ b/Klipper_cfg/Prusa_Universal_Config_Revised/Macros/mesh_magnets.cfg
@@ -16,6 +16,8 @@ algorithm: bicubic
 #relative_reference_index: 24 # 7x7
 #relative_reference_index: 12 # 5x5
 relative_reference_index: 4 # 3x3
+
+# TODO PV hide fade behind config
 fade_start: 1.0
 fade_end: 10.0
 
