--- a/Klipper_cfg/Prusa_Universal_Config_Revised/printer_example_Einsy.cfg
+++ b/Klipper_cfg/Prusa_Universal_Config_Revised/printer_example_Einsy.cfg
@@ -160,11 +160,7 @@ default_type: command
 [include Macros/cancel_print.cfg]				# Cancel Print
 [include Macros/pause_resume.cfg]				# Pause & Resume
 [include Macros/tram_z.cfg]						# Tramming of the Z axis to the top
-#[include Macros/tasmotaswitch.cfg]				# Tasmota Power switch control with Idle timeout
-[include Macros/mesh.cfg]						# Mesh config including ignoring faulty regions due magnets
-#[include Macros/mesh_fade.cfg]				    # Mesh config as above, but with fade enabled - fading mesh results over height of the print
-#[include Macros/mesh_magnets.cfg]			    # Mesh config as above, but with additional magnet coordinates added, e.g. for 7x7 mesh
-#[include Macros/mesh_old.cfg]					# Mesh config classic way as i am not convinced of the new method
+[include Macros/mesh_magnets.cfg]			    # Mesh config as above, but with additional magnet coordinates added, e.g. for 7x7 mesh
 [include Macros/homing.cfg]						# Homing routine
 [include Macros/print_time.cfg]                 # Statistics about total print time and save the to file
 [include Macros/pa_test.cfg]                    # Automated PA test procedure make sure you upload pa_test.gcode or create your own. Function can be called from the menu
